apps/bsis-app/overlays/development/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bsis-app
spec:
  tls:
    - hosts:
        - app-development.example.com
      secretName: bsis-app-development-tls
  rules:
    - host: app-development.example.com
